# numpyvision

./: README.md  pyproject.toml
numpyvision/: __init__.py  _emnist.py  _mnist.py  dataset.py
numpyvision/datasets/: __init__.py  _emnist.py  mnist.py
